--- a/src/styles/navBar.module.css
+++ b/src/styles/navBar.module.css
@@ -17,10 +17,31 @@
   background-color: #eee;
   padding: 0.5rem;
   border-radius: 8px;
-  width : 20rem
+  width: 20rem;
 }
 
 .icons {
   display: flex;
   gap: 1rem;
+}
+
+.input {
+  width: 100%;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+  }
+
+  .searchBar {
+    width: 100%;
+  }
+
+  .input {
+    width: auto;
+    flex-grow: 1;
+  }
 }
