--- a/src/styles/navBar.module.css
+++ b/src/styles/navBar.module.css
@@ -13,6 +13,7 @@
 .companyName {
   font-size: 1.5rem;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .searchBar {
@@ -27,6 +28,7 @@
 .icons {
   display: flex;
   gap: 1rem;
+  cursor: pointer;
 }
 
 .input {
